--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/intro_bright"
     android:orientation="vertical"
     tools:context=".controllers.HomeFragment">
 
@@ -16,14 +18,11 @@
         android:textAlignment="center"
         android:textSize="@dimen/_24ssp" />
 
-
     <FrameLayout
         android:id="@+id/home_fragment_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        >
-
+        android:layout_marginTop="56dp">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -61,42 +60,58 @@
     <LinearLayout
         android:id="@+id/home_fragment_first_time_user"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="4dp"
         android:layout_marginTop="8dp"
-        android:visibility="gone"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
-        <!-- USER NAME-->
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginBottom="@dimen/_16sdp"
+            android:text="@string/exercise_where_ever_you_are"
+            android:textAlignment="center" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom"
+            android:orientation="vertical">
+
+            <!-- USER NAME-->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/user_name">
+                android:orientation="horizontal">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/user_name_text_input"
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textAutoCorrect|textCapSentences" />
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
+                    android:alpha="0.6"
+                    android:background="@color/white"
+                    android:hint="@string/user_name">
 
-        <!--BUTTON-->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_save"
-            style="@style/Widget.MaterialComponents.Button"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="8dp"
-            android:padding="4dp"
-            android:text="@string/save"
-            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/user_name_text_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textAutoCorrect|textCapSentences" />
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+
+            <!--BUTTON-->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_save"
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:padding="4dp"
+                android:text="@string/log_in"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
