--- a/app/src/main/res/layout-w600dp-land/activity_profile.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_profile.xml
@@ -13,6 +13,7 @@
         layout="@layout/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/activity_main_navigation_view"
         android:layout_alignParentTop="true" />
 
 
@@ -36,26 +37,5 @@
         android:layout_alignParentStart="true"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/activity_main_drawer">
-
-        <!--TO PUT LOGO BOTTOM DRAWER-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
-                android:gravity="bottom"
-                android:background="@color/light_grey"
-                android:textAlignment="center"
-                android:textStyle="italic"
-                android:text="Mon kiné de poche"/>
-        </LinearLayout>
-
-    </com.google.android.material.navigation.NavigationView>
+        app:menu="@menu/activity_main_drawer" />
 </RelativeLayout>
