--- a/app/src/main/res/layout/drawer_header_main.xml
+++ b/app/src/main/res/layout/drawer_header_main.xml
@@ -10,9 +10,9 @@
         android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_16sdp"
+        android:layout_margin="@dimen/_8sdp"
         android:textColor="@color/white"
-        android:textSize="@dimen/_24ssp"
+        android:textSize="@dimen/_16sdp"
         android:textStyle="bold" />
 
     <!--TODAY PROGRESS-->
@@ -20,6 +20,6 @@
         android:id="@+id/progress_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_16sdp"
+        android:layout_marginStart="@dimen/_8sdp"
         android:textColor="@color/white" />
 </LinearLayout>
