--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,13 +16,15 @@
         android:layout_marginTop="@dimen/_16sdp"
         android:text="@string/welcome"
         android:textAlignment="center"
+        android:layout_marginBottom="@dimen/_56sdp"
         android:textSize="@dimen/_24ssp" />
 
+    <!--SHOW CURRENT PROGRAM-->
     <FrameLayout
         android:id="@+id/home_fragment_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp">
+        android:layout_margin="@dimen/_4sdp">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -44,74 +46,15 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:text="@string/current_program"
+                android:textSize="@dimen/_12sdp"
                 android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/_48sdp"
+            android:layout_height="@dimen/_48sdp"
             android:layout_gravity="center"
             android:contentDescription="@string/start_btn"
             android:src="@drawable/outline_play_circle_outline_black_48" />
     </FrameLayout>
-
-
-    <!--SHOWS FIRST TIME USER-->
-    <LinearLayout
-        android:id="@+id/home_fragment_first_time_user"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="4dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_16sdp"
-            android:text="@string/exercise_where_ever_you_are"
-            android:textAlignment="center" />
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="bottom"
-            android:orientation="vertical">
-
-            <!-- USER NAME-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.6"
-                    android:background="@color/white"
-                    android:hint="@string/user_name">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/user_name_text_input"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textAutoCorrect|textCapSentences" />
-                </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-
-            <!--BUTTON-->
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_save"
-                style="@style/Widget.MaterialComponents.Button"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="8dp"
-                android:padding="4dp"
-                android:text="@string/log_in"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
-        </LinearLayout>
-    </LinearLayout>
 </LinearLayout>
